Update gitignore and API generated files
